# eewpw-parser

./: .gitignore  README.md  pyproject.toml
configs/: finder.json  global.json  vs.json
configs/profiles/: vs_default.json  vs_processing_info.json
docs/: architecture.md  class_diagram.md  parsers_finder.md  parsers_vs.md  schema_overview.md
scripts/: cleanup_live_raw.py  live_log_replay.sh  live_log_replay_test.sh
src/eewpw_parser/: cli.py  config.py  config_loader.py  dedup.py  live_cli.py  live_engine.py  replay_cli.py  (+6 more)
tests/: test_annotations_pattern_id_namespace.py  test_cleanup_live_raw.py  test_cli_config_override.py  test_cli_stream.py  test_cli_unknown_algo.py  test_composite_sink.py  test_config_algo_mapping.py  test_config_global.py  test_config_loader.py  test_deduplicate.py  test_finder_legacy_shell_counts.py  test_finder_native_station_block.py  test_finder_recent_lines.py  test_finder_stream_mode.py  test_finder_verifier_scfinder.py  test_live_cli.py  test_live_cli_startup.py  test_live_cli_unknown_algo.py  test_live_daily_finder.py  test_live_daily_vs.py  test_live_engine_basic.py  test_live_rotation.py  test_live_writer_ordering.py  test_replay_cli.py  test_replay_time_rebase.py  test_scfinder_solution_details.py  test_schema_backcompat.py  test_shell_counts_finder.py  test_shell_counts_vs.py  test_sink_batch.py  test_sink_stream.py  test_sources.py  test_verbose_cli.py  test_vs_contract_scvsmag.py  test_vs_parser.py  test_vs_recent_lines.py  test_vs_sentinel_preservation.py  test_vs_stream_mode.py  test_vs_unused_stations.py  test_vs_verifier.py
(+14 files in other folders)
